Add another FlashDownloadInterceptionTest test case.

BUG=711966

Review-Url: https://codereview.chromium.org/2820913002
Cr-Commit-Position: refs/heads/master@{#465330}

Former-commit-id: 7275eb16ae8249a51f924ffbd110dcff82c3651b